# apparun

./: .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  gui.Dockerfile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: continuous_development.yml  continuous_integration.yml
apparun/: core.py  exceptions.py  expressions.py  impact_methods.py  impact_model.py  impact_tree.py  logger.py  parameters.py  results.py  score.py  tree_node.py
apparun/cli/: main.py
apparun/gui/: modules.py
apparun/gui/panels/: base.py  output_dynamic.py  output_static.py
apparun/resources/pef31/: normalisation_factor.csv  weighting_factor.csv
samples/conf/: custom_gui.yaml  parameters.yaml  sample_gui.yaml
samples/conf/parameters_sets/: scenario_A.yaml  scenario_B.yaml
samples/impact_models/: nvidia_ai_gpu_chip.yaml
samples/scripts/: custom_gui.py  python_api_usage.py  unique_score_usage.py
tests/: unit_tests.py
tests/data/conf/: functional_gui_local_logo.yaml
tests/data/impact_models/: 5_indicator_model_ef31.yaml  nvidia_ai_gpu_chip_piecewise.yaml
tests/data/parameters/valids/: valid_parameters.yaml
tests/end_to_end/: test_gui.py  test_piecewise.py
tests/functional/: test_arithmetic_expression_validation.py  test_impact_methods.py  test_parameters_values_loading.py  test_serialisation.py
tests/smoke/: test_help.py
