[build-system]
requires = ["setuptools>=61.0.0", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["app", "apparun"]

[project]
name = "apparun"
version = "0.3.0"
authors = [{ name = "Maxime Peralta", email = "maxime.peralta@cea.fr"}]
maintainers= [{name = "Maxime Peralta", email = "maxime.peralta@cea.fr"}]
description = "Appa Run is a package to execute impact models produced by Appa Build"
keywords = []
license = { file = "LICENSE.md" }
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Eclipse Public License 2.0 (EPL-2.0)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
]
requires-python = ">=3.6"
dependencies = [
    "pytest",
    "aenum>=3.0.0",
    "pydantic",
    "pyyaml>=6.0.1",
    "sympy>=1.12",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "typer>=0.9.0",
    "plotpy",
    "fastapi",
    "uvicorn[standard]",
    "kaleido",
    "SALib",
]

[project.scripts]
apparun = "app.cli.main:cli_app"

[project.urls]
"Source" = "https://github.com/appalca/apparun/"